--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -197,6 +197,7 @@
     }
    ],
    "source": [
+    "#select the first row for measurement\n",
     "first_row_measurement = session.query(Measurement).first()\n",
     "first_row_measurement.__dict__"
    ]
@@ -224,6 +225,7 @@
     }
    ],
    "source": [
+    "#select the first row for station\n",
     "first_row_station = session.query(Station).first()\n",
     "first_row_station.__dict__"
    ]
@@ -1531,6 +1533,7 @@
     }
    ],
    "source": [
+    "#drop NA in the precipitation columns\n",
     "prcp_results=prcp_results.dropna()\n",
     "prcp_results"
    ]
@@ -1553,6 +1556,7 @@
     }
    ],
    "source": [
+    "#validate the data type of the dataframe\n",
     "prcp_results.dtypes"
    ]
   },
@@ -1957,6 +1961,7 @@
     }
    ],
    "source": [
+    "# Use Pandas to calcualte the summary statistics for the precipitation data\n",
     "precipitation_statistics_table = prcp_results.groupby('Measurement Date').agg({'Precipitation' : ['mean', 'median','var','std','sem']})\n",
     "precipitation_statistics_table"
    ]
@@ -2268,7 +2273,7 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2282,7 +2287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.12"
   },
   "nteract": {
    "version": "0.12.3"
